use github docker registry

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   command-builder:
-    image: danielraab/command-builder:latest
+    image: ghcr.io/danielraab/command-builder:latest
     container_name: command-builder
     ports:
       - "8080:80"
