add tests (AI supported), and prepare everything for new version tag

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "command-builder",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --allowed-hosts",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "ng test --coverage",
     "serve:ssr:temp": "node dist/temp/server/server.mjs"
   },
   "prettier": {
@@ -43,6 +43,7 @@
     "@tailwindcss/postcss": "^4.1.12",
     "@types/express": "^5.0.1",
     "@types/node": "^20.17.19",
+    "@vitest/coverage-v8": "^4.0.17",
     "jsdom": "^27.1.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.12",
